--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@binance/connector": "^1.1.0",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "telegraf": "^4.4.1"
