--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@binance/connector": "^1.1.0",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "telegraf": "^4.4.1"
   }
 }
