--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "better-sqlite3": "^7.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "node-binance-api": "^0.13.0",
     "telegraf": "^4.4.1"
   }
 }
