--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@binance/connector": "^1.1.0",
     "better-sqlite3": "^7.4.3",
+    "coingecko-api": "^1.0.10",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "node-binance-api": "^0.13.0",
